--- a/index.html
+++ b/index.html
@@ -7,12 +7,19 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
   <link rel="stylesheet" href="index.css">
+  <title>It's Rodela's Bithday!</title>
 </head>
 
 <body>
-  <div class="container-fluid">
+  <div class="container-fluid mb-3" style="height: 680px;">
 
-    <div class="row mt-5 pt-5">
+    <div class="open text-center">
+      <div id='blink' class='blink'>
+        <p id="blinkText">Its Rodela's Birthday</p>
+      </div>
+    </div>
+
+    <div class="row mt-5 ">
       <div class="col-md-12" id="typed-strings">
         <div class="element"></div>
         <p style=" text-align: justify;" class="bday-text">
@@ -47,7 +54,7 @@
       fadeOutDelay: 500,
     });
 
-    
+
   </script>
 </body>
 
